test(transacao financeira): :white_check_mark: adiciona validacoes e aumenta cobertura de testes