@@ -2,7 +2,8 @@ package diegosneves.github.service;
 
 import diegosneves.github.exception.CpfJaCadastradoException;
 import diegosneves.github.exception.EmailJaCadastradoException;
-import diegosneves.github.exception.UsuarioNaoEncontradoException;
+import diegosneves.github.exception.CpfNaoEncontradoException;
+import diegosneves.github.exception.IdInvalidoException;
 import diegosneves.github.mapper.MapearConstrutor;
 import diegosneves.github.model.Usuario;
 import diegosneves.github.repository.UsuarioRepository;
@@ -13,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
@@ -28,7 +28,7 @@ public class UsuarioService {
     public Usuario findUsuarioByCpf(String cpf) {
         Optional<Usuario> usuarioOptional = this.repository.findUsuarioByCpf(cpf);
         if (usuarioOptional.isEmpty()) {
-            throw new UsuarioNaoEncontradoException(cpf);
+            throw new CpfNaoEncontradoException(cpf);
         }
         return usuarioOptional.get();
     }
@@ -37,7 +37,7 @@ public class UsuarioService {
     public List<UsuarioResponse> obterTodosUsuarios() {
         List<Usuario> usuarios = this.repository.findAll();
         return usuarios.stream()
-                .map(usuario -> MapearConstrutor.construirNovoDe(UsuarioResponse.class, usuario)).collect(Collectors.toList());
+                .map(usuario -> MapearConstrutor.construirNovoDe(UsuarioResponse.class, usuario)).toList();
     }
 
     public UsuarioResponse cadastrarUsuario(UsuarioRequest request) throws CpfJaCadastradoException, EmailJaCadastradoException {
@@ -58,5 +58,13 @@ public class UsuarioService {
                 throw new EmailJaCadastradoException(email);
             }
         }
+    }
+
+    public Usuario encontrarUsuarioPorId(Long idUsuario) throws IdInvalidoException {
+        Optional<Usuario> usuarioOptional = this.repository.findUsuarioById(idUsuario);
+        if (usuarioOptional.isEmpty()) {
+            throw new IdInvalidoException(idUsuario.toString());
+        }
+        return usuarioOptional.get();
     }
 }
